# LineUp

./: .gitignore  README.md  data.sql  plan.md
client/: index.html  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.jsx  WebSocket.js  config.js  themeConfig.js
client/src/components/: Game.js  GameLobby.js  Home.jsx  Login.js  Register.js
client/src/components/Auth/: Login.jsx  Register.jsx
client/src/components/Game/: CreateMatch.jsx  GameBoard.jsx  GameRoom.jsx  JoinMatch.jsx  JoinMatchModal.jsx  WaitingRoom.jsx
client/src/components/Match/: MatchBoard.jsx  MatchControls.jsx  MatchInfo.jsx
client/src/components/common/: AuthContext.jsx  ErrorBoundary.jsx  Header.jsx  ProtectedRoute.jsx
client/src/components/layout/: PageLayout.jsx
client/src/contexts/: AuthContext.jsx
client/src/pages/: Home.jsx  MatchRoom.jsx
client/src/services/: api.js  auth.js  websocket.js
client/src/styles/: index.css
server/: go.mod  go.sum  makefile
server/LineUpSolution/LineUpServer/: CMakeLists.txt  Config.cpp  Config.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  InputValidation.cpp  InputValidation.hpp  LineUpServer.cpp  Session.cpp  Session.hpp  UserManager.cpp  UserManager.hpp  config.json
server/cmd/: main.go
server/cmd/apiserver/: main.go
server/cmd/server/: main.go
server/cmd/wsserver/: main.go
server/configs/: config.yaml
server/internal/api/: handlers.go  routes.go  server.go
server/internal/auth/: auth.go
server/internal/config/: config.go
server/internal/db/: db.go  matches.go  move.go  users.go
server/internal/game/: game.go  game_utils.go  gameinfo.go  lobby.go  waitingRoom.go  waiting_room.go
server/internal/match/: board.go  homepage.go  lobby.go  matchroom.go  matchutils.go  waiting_room.go
server/internal/middleware/: auth.go  validation.go
server/internal/server/: server.go
server/internal/utils/: errors.go  snowflake.go
server/internal/utils/websocket/: client.go  hub.go
server/internal/websocket/: client.go  hub.go  server.go
